package hearts;

option java_package = "org.bitcoma.hearts.model.transfered";
option java_outer_classname = "GenericProtos";
option optimize_for = SPEED;

message GenericResponse {

    enum ResponseCode {
        OK = 0;
        INVALID_PARAMS = 1;
        MISSING_PARAMS = 2;
        UNEXPECTED_REQUEST = 3;
        UNAUTHORIZED = 4;
        RESOURCE_UNAVAILABLE = 5;
    }
    
    optional ResponseCode response_code = 1;

}